<refactor>
clean up code