@@ -3,6 +3,7 @@ package com.example.A3.model;
 import org.junit.jupiter.api.Test;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -43,9 +44,9 @@ class Crazy8GameTest {
     @Test
     void drawCard() {
         ArrayList<String> cards = game.getDeck();
-        assertTrue(game.drawCard(null)!=null);
+        assertNotNull(game.drawCard(null));
         assertEquals("AC",game.drawCard("AC"));
-        assertEquals(null,game.drawCard("AX"));
+        assertNull(game.drawCard("AX"));
     }
 
     @Test
@@ -63,8 +64,8 @@ class Crazy8GameTest {
     void dealPlayerCards() {
 
         game.dealPlayerCards();
-        for(int i = 0;i< players.size();i++){
-            assertEquals(5,players.get(i).getHand().size());
+        for (Player player : players) {
+            assertEquals(5, player.getHand().size());
         }
         assertEquals(32,game.getDeck().size());
     }
@@ -185,80 +186,80 @@ class Crazy8GameTest {
     void hasPlayableCard() {
         game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("7S","QC")));
         game.setCurrentTopCard("7H");
-        assertEquals(true,game.hasPlayableCard(game.getPlayers().get(0), game.getCurrentTopCard()));
+        assertTrue(game.hasPlayableCard(game.getPlayers().get(0), game.getCurrentTopCard()));
         game.setCurrentTopCard("2C");
-        assertEquals(true,game.hasPlayableCard(game.getPlayers().get(0), game.getCurrentTopCard()));
+        assertTrue(game.hasPlayableCard(game.getPlayers().get(0), game.getCurrentTopCard()));
         game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("8S","QC")));
         game.setCurrentTopCard("3D");
-        assertEquals(true,game.hasPlayableCard(game.getPlayers().get(0), game.getCurrentTopCard()));
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("QC")));
+        assertTrue(game.hasPlayableCard(game.getPlayers().get(0), game.getCurrentTopCard()));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("QC")));
         game.setCurrentTopCard("3D");
-        assertEquals(false,game.hasPlayableCard(game.getPlayers().get(0), game.getCurrentTopCard()));
+        assertFalse(game.hasPlayableCard(game.getPlayers().get(0), game.getCurrentTopCard()));
 
     }
 
     @Test
     void calculateHand() {
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("AD")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("AD")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(1,game.getPlayers().get(0).getScore());
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("2D")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("2D")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(3,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("3D")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("3D")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(3,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("4D")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("4D")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(4,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("5D")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("5D")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(5,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("6D")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("6D")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(6,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("7D")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("7D")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(7,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("8D")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("8D")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(50,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("9D")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("9D")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(9,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("10D")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("10D")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(10,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("JD")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("JD")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(10,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("QD")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("QD")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(10,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("KD")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("KD")));
         game.calculateHand(game.getPlayers().get(0));
         assertEquals(10,game.getPlayers().get(0).getScore());
         game.getPlayers().get(0).setScore(0);
@@ -272,7 +273,7 @@ class Crazy8GameTest {
     @Test
     void dealerDrawCard() {
         game.dealerDrawCard(null);
-        assertTrue(game.getCurrentTopCard()!=null);
+        assertNotNull(game.getCurrentTopCard());
         game.dealerDrawCard("7D");
         assertEquals("7D",game.getCurrentTopCard());
 
@@ -316,57 +317,57 @@ class Crazy8GameTest {
     void isRoundUnplayable() {
         //able to draw a card
         game.setCurrentTopCard("9C");
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("3S")));
-        game.getPlayers().get(1).setHand(new ArrayList<>(Arrays.asList("4D")));
-        game.getPlayers().get(2).setHand(new ArrayList<>(Arrays.asList("7H")));
-        game.getPlayers().get(3).setHand(new ArrayList<>(Arrays.asList("3S")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("3S")));
+        game.getPlayers().get(1).setHand(new ArrayList<>(List.of("4D")));
+        game.getPlayers().get(2).setHand(new ArrayList<>(List.of("7H")));
+        game.getPlayers().get(3).setHand(new ArrayList<>(List.of("3S")));
         assertFalse(game.isRoundUnplayable());
 
         //p2 able to play card match suit
         game.setDeck(new ArrayList<>());
         game.setCurrentTopCard("9D");
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("3S")));
-        game.getPlayers().get(1).setHand(new ArrayList<>(Arrays.asList("4D")));
-        game.getPlayers().get(2).setHand(new ArrayList<>(Arrays.asList("7H")));
-        game.getPlayers().get(3).setHand(new ArrayList<>(Arrays.asList("3S")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("3S")));
+        game.getPlayers().get(1).setHand(new ArrayList<>(List.of("4D")));
+        game.getPlayers().get(2).setHand(new ArrayList<>(List.of("7H")));
+        game.getPlayers().get(3).setHand(new ArrayList<>(List.of("3S")));
         assertFalse(game.isRoundUnplayable());
 
         //p4 able to play card crazy 8
         game.setCurrentTopCard("AD");
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("3S")));
-        game.getPlayers().get(1).setHand(new ArrayList<>(Arrays.asList("4C")));
-        game.getPlayers().get(2).setHand(new ArrayList<>(Arrays.asList("7H")));
-        game.getPlayers().get(3).setHand(new ArrayList<>(Arrays.asList("8S")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("3S")));
+        game.getPlayers().get(1).setHand(new ArrayList<>(List.of("4C")));
+        game.getPlayers().get(2).setHand(new ArrayList<>(List.of("7H")));
+        game.getPlayers().get(3).setHand(new ArrayList<>(List.of("8S")));
         assertFalse(game.isRoundUnplayable());
 
         //p1 able to play card match rank
         game.setCurrentTopCard("AD");
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("AS")));
-        game.getPlayers().get(1).setHand(new ArrayList<>(Arrays.asList("4C")));
-        game.getPlayers().get(2).setHand(new ArrayList<>(Arrays.asList("7H")));
-        game.getPlayers().get(3).setHand(new ArrayList<>(Arrays.asList("8S")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("AS")));
+        game.getPlayers().get(1).setHand(new ArrayList<>(List.of("4C")));
+        game.getPlayers().get(2).setHand(new ArrayList<>(List.of("7H")));
+        game.getPlayers().get(3).setHand(new ArrayList<>(List.of("8S")));
         assertFalse(game.isRoundUnplayable());
 
         game.setCurrentTopCard("JD");
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("3S")));
-        game.getPlayers().get(1).setHand(new ArrayList<>(Arrays.asList("4C")));
-        game.getPlayers().get(2).setHand(new ArrayList<>(Arrays.asList("7H")));
-        game.getPlayers().get(3).setHand(new ArrayList<>(Arrays.asList("3S")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("3S")));
+        game.getPlayers().get(1).setHand(new ArrayList<>(List.of("4C")));
+        game.getPlayers().get(2).setHand(new ArrayList<>(List.of("7H")));
+        game.getPlayers().get(3).setHand(new ArrayList<>(List.of("3S")));
         assertTrue(game.isRoundUnplayable());
     }
 
     @Test
     void didFinishRound() {
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("3S,7H")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("3S,7H")));
         game.getPlayers().get(1).setHand(new ArrayList<>());
-        game.getPlayers().get(2).setHand(new ArrayList<>(Arrays.asList("7H,3C,9S")));
-        game.getPlayers().get(3).setHand(new ArrayList<>(Arrays.asList("3H")));
+        game.getPlayers().get(2).setHand(new ArrayList<>(List.of("7H,3C,9S")));
+        game.getPlayers().get(3).setHand(new ArrayList<>(List.of("3H")));
         assertTrue(game.didFinishRound());
 
-        game.getPlayers().get(0).setHand(new ArrayList<>(Arrays.asList("3S,7H")));
-        game.getPlayers().get(1).setHand(new ArrayList<>(Arrays.asList("AS")));
-        game.getPlayers().get(2).setHand(new ArrayList<>(Arrays.asList("7H,3C,9S")));
-        game.getPlayers().get(3).setHand(new ArrayList<>(Arrays.asList("3H")));
+        game.getPlayers().get(0).setHand(new ArrayList<>(List.of("3S,7H")));
+        game.getPlayers().get(1).setHand(new ArrayList<>(List.of("AS")));
+        game.getPlayers().get(2).setHand(new ArrayList<>(List.of("7H,3C,9S")));
+        game.getPlayers().get(3).setHand(new ArrayList<>(List.of("3H")));
         assertFalse(game.didFinishRound());
 
     }
